--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <meta charset="utf-8">
+        <!-- <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=dvice-width, initial-scale=1.0">
+	    <meta name="viewport" content="width=dvice-width, initial-scale=1.0"> -->
         <link rel="stylesheet" href="index.css" /> 
     </head>
     <body>
@@ -11,6 +11,7 @@
         <button id="increment-btn" onclick="increment()">INCREMENT</button> <br/>
         <button id ="save-btn" onclick="save()">SAVE</button>
         <p id="save-el">Previous entires: </p>
+        <img src="station2.jpg" sizes="(max-width: 600px) 480px" />
         <script src="index.js"></script>
     </body>
 </html>
