--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
     <head>
-        <meta charset="utf-8">
+        <!-- <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=dvice-width, initial-scale=1.0">
+	    <meta name="viewport" content="width=dvice-width, initial-scale=1.0"> -->
         <link rel="stylesheet" href="index.css" /> 
     </head>
     <body>
-        <h1> People Enterted: </h1>
+        <h1> People Entered: </h1>
         <h2 id="count-el"> 0 </h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button> <br/>
         <button id ="save-btn" onclick="save()">SAVE</button>
         <p id="save-el">Previous entires: </p>
-        <img src="station2.jpg" sizes="(max-width: 600px) 480px" />
+        <img srcset="station2-480w.jpg 480w, station2-800w.jpg 800w" sizes="(max-width: 600px) 480px, 800px" />
         <script src="index.js"></script>
     </body>
 </html>
